--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-cmd",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "seajs(CMD) Module transform and concat pulgin for gulp",
   "homepage": "https://github.com/elover/gulp-cmd",
   "author": {
@@ -16,6 +16,7 @@
   "keywords": [
     "gulpplugin",
     "seajs",
+    "concat",
     "cmd",
     "transform"
   ],
@@ -36,6 +37,8 @@
     "gulp-handlebars": "^4.0.0",
     "gulp-wrap": "^0.11.0",
     "should": "^4.6.5",
+    "gulp-cmd": "*",
+    "gulp-webserver":"*",
     "stream-assert": "^2.0.2"
   },
   "license": "MIT"
